--- a/roles/ssl_certificates/tasks/nginx.yml
+++ b/roles/ssl_certificates/tasks/nginx.yml
@@ -1,5 +1,13 @@
 ---
-- name: Create Nginx conf for challenges location
+- name: Create directories and set permissions
+  file:
+    path: "{{ acme_challenges_path }}/.well-known/acme-challenge"
+    state: directory
+    mode: '0755'
+    owner: "{{ web_user }}"
+    group: "{{ web_group }}"
+
+- name: Create Nginx conf for ACME challenges location
   template:
     src: acme-challenge-location.conf.j2
     dest: "{{ nginx_path }}/acme-challenge-location.conf"
@@ -11,7 +19,9 @@
     sed -n -e "/listen 80/,/server_name/{s/server_name \(.*\);/\1/p}" {{ nginx_path }}/sites-enabled/{{ item.key }}.conf
   register: current_hosts
   changed_when: false
-  when: site_uses_letsencrypt
+  when:
+    - site_uses_acme
+    - site_uses_acme_http_challenge
   with_dict: "{{ wordpress_sites }}"
 
 - name: Create needed Nginx confs for challenges
@@ -21,7 +31,8 @@
     mode: '0644'
   register: challenge_site_confs
   when:
-    - site_uses_letsencrypt
+    - site_uses_acme
+    - site_uses_acme_http_challenge
     - missing_hosts | count
   with_dict: "{{ wordpress_sites }}"
 
@@ -32,35 +43,10 @@
     state: link
   register: challenge_sites_enabled
   when:
-    - site_uses_letsencrypt
+    - site_uses_acme
+    - site_uses_acme_http_challenge
     - missing_hosts | count
   with_dict: "{{ wordpress_sites }}"
-  notify: disable temporary challenge sites
-
+#  notify: disable temporary challenge sites
 - import_tasks: "{{ playbook_dir }}/roles/common/tasks/reload_nginx.yml"
   when: challenge_site_confs is changed or challenge_sites_enabled is changed
-
-- name: Create test Acme Challenge file
-  file:
-    path: "{{ acme_tiny_challenges_directory }}/ping.txt"
-    state: touch
-    mode: '0644'
-
-- name: Test Acme Challenges
-  test_challenges:
-    hosts: "{{ site_hosts }}"
-  register: letsencrypt_test_challenges
-  ignore_errors: true
-  when: site_uses_letsencrypt
-  with_dict: "{{ wordpress_sites }}"
-
-- name: Notify of challenge failures
-  fail:
-    msg: >
-      Could not access the challenge file for the hosts/domains: {{ item.failed_hosts | join(', ') }}.
-      Let's Encrypt requires every domain/host be publicly accessible.
-      Make sure that a valid DNS record exists for {{ item.failed_hosts | join(', ') }} and that they point to this server's IP.
-      If you don't want these domains in your SSL certificate, then remove them from `site_hosts`.
-      See https://roots.io/trellis/docs/ssl for more details.
-  when: item is not skipped and item is failed
-  with_items: "{{ letsencrypt_test_challenges.results }}"
